# Python-package-valetudo-map-parser

./: CHANGELOG.md  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: code_quality.yaml  code_quality.yaml.bak  release.yaml  requirements.txt
SCR/: __init__.py  pyproject.toml
SCR/config/: __init__.py  auto_crop.py  colors.py  drawable.py  shared.py  types.py
SCR/tests/: refactored.py  test.py
SCR/valetudo_map_parser/: __init__.py  conga_draw.py  conga_handler.py  const.py  hypfer_draw.py  hypfer_handler.py  hypfer_rooms_handler.py  hypfer_utils.py  images_utils.py  map_data.py  rand256_handler.py  rand25_handler.py  reimg_draw.py  rooms_handler.py
SCR/valetudo_map_parser/config/: async_utils.py  auto_crop.py  color_utils.py  colors.py  colors_man.py  drawable.py  drawable_elements.py  enhanced_drawable.py  material.py  optimized_element_map.py  rand256_parser.py  rand25_parser.py  room_outline.py  shared.py  types.py  utils.py
SCR/valetudo_map_parser/config/status_text/: __init__.py  status_text.py  translations.py
SCR/valetudo_map_parser/utils/: __init__.py  color_utils.py
backups/: colors.py  drawable.ori  hypfer_handler_ori.py  hypfer_rooms_handler.py  rand25_handler_rooms.py  refactored_old_code.py  test_old_pars.py
examples/: async_get_pil_image_example.py
new_tests/: FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS_SUMMARY.md  __init__.py  conftest.py  pytest.ini  test_map_data.py
new_tests/config/: __init__.py  test_colors.py  test_drawable.py  test_shared.py  test_status_text.py  test_types.py
new_tests/handlers/: __init__.py
new_tests/integration/: test_basic_integration.py
tests/: PROFILING_README.md  RAND_TO_HYPFER_COMPRESSION_RESULTS.md  VALETUDO_MAP_PARSER_TYPES_USAGE_REPORT.md  X40_carpet.json  X40_map_complete.json  X40_mapping.json  analyze_room12.py  analyze_room_connections.py  analyze_segment_walls.py  benchmark_margins.py  compare_payloads.py  convert_rand_to_hypfer.py  debug_binary.py  debug_manage_rooms.py  glossyhardtofindnarwhal.json  manage_rooms.py  profiling_requirements.txt  rand.json  rand_rooms_test.py  refactored.py  rooms_test.py  test.json  test.py  test_autocrop_floor.py  test_bytes_format_consistency.py  test_floor_data.py  test_floor_data_simple.py  test_floor_performance.py  test_hypfer_profiling.py  test_material_performance.py  test_materials.py  test_memory_leak.py  test_mvcrender.py  test_parser.py  test_parser_comparison.py  test_rand.py  test_rand256.json  test_rand_to_hypfer_compression.py  test_reload_rotation_change.py  test_room_store.py  (+5 more)
tests/tests/: comparison.txt  test_all_bins.py  test_robot_angles.py
