[tool.poetry]
name = "valetudo-map-parser"
version = "0.1.10b7"
description = "A Python library to parse Valetudo map data returning a PIL Image object."
authors = ["Sandro Cantarella <gsca075@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "valetudo_map_parser", from = "SCR"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/sca075/Python-package-valetudo-map-parser"
"Repository" = "https://github.com/sca075/Python-package-valetudo-map-parser"
"Bug Tracker" = "https://github.com/sca075/Python-package-valetudo-map-parser/issues"
"Changelog" = "https://github.com/sca075/Python-package-valetudo-map-parser/releases"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=1.26.4"
Pillow = ">=10.3.0"
scipy = ">=1.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
isort = "*"
pylint = "*"
types-Pillow = "*"

# Ruff settings
[tool.ruff.format]

# isort settings (compatible with Ruff)
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["valetudo_map_parser"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2

# Pylint settings
[tool.pylint]
disable = ["C0103", "C0116", "R0902", "R0903", "R0904","R0913",
     "R0914", "R0917", "R0915", "W0640", "R0801"]  # R0801 = duplicate-code

max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
