[tool.poetry]
name = "your-library-name"
version = "0.1.0"
description = "A brief description of your library"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "SCR"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
Pillow = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"