[tool.poetry]
name = "valetudo-map-parser"
version = "0.1.0"
description = "A Python library to parse Valetudo map data returning a PIL Image object"
authors = ["@sca075"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "SCR"}]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=1.26.4"
Pillow = ">=10.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"